# binance_datatool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  api_download.sh  aws_download.sh  aws_parse.sh  backup_aws_data.sh  bhds.py  binance_data.sh  candle_manager.py  checker.py  cli.py  constant.py  crawl_binance_swap.py  crawl_binance_trading_usdt_swap.py  crawler.py  data_compare.py  dingding.py  download_binance_candle.sh  download_klines.sh  download_verify_aws.sh  download_verify_aws_funding.sh  environment.yml  gen_kline.sh  market_api.py  parse_aws.sh  pyproject.toml  resample.sh  test.py  test_market.py  util.py
.github/workflows/: publish.yml
api/: __init__.py  api_kline.py  app.py  binance.py  binance_market_async.py  funding.py  kline.py
api/binance/: __init__.py  basics.py  binance_market_restful.py  binance_market_ws.py  exceptions.py  rest_basics.py  rest_market.py  restful_basics.py  ws_basics.py
aws/: checksum.py  client_async.py
aws/funding/: app.py  download.py  parse.py  util.py  verify.py
aws/kline/: _legacy.py  app.py  download.py  parse.py  util.py  verify.py
aws/liquidation/: download.py
bhds/: api_funding.py  api_kline.py  aws_basics.py  aws_candle.py  aws_funding.py  aws_kline.py  aws_trades.py  aws_util.py  bhds_util.py  check_candle.py  checksum.py  cli.py  compare.py  exchange_info.py  filter_symbol.py  fix_data.py  infer_exchange_info.py  polars_kline.py  quantclass_candle.py  symbol_filter.py  util.py
bhds_extra/: spot.json  usdt_futures.json
bmac/: bmac.py  bmac_util.py  candle_listener.py  candle_manager.py  checker.py  cli.py  crawl_binance_swap.py  crawler.py  dingding.py  filter_symbol.py  handler.py  init_history.py  market_api.py
bmac_example/coin_perp_5m_all/: config.json.example
bmac_example/coin_perp_5m_minimal/: config.json.example
bmac_example/usdt_5m_example/: config.json.example
bmac_example/usdt_perp_1h_all/: config.json.example
bmac_example/usdt_perp_5m_all/: config.json.example
bmac_example/usdt_spot_1h_all/: config.json.example
bmac_example/usdt_spot_1h_example/: config.json.example
coin_5m_example/: config.json
config/: binance_candle_split.json  binance_exginfo_coin_futures.json  binance_exginfo_spot.json  binance_exginfo_usdt_futures.json  config.py  split.json
config/bhds_extra_exginfo/: spot.json  um_futures.json
config/bhds_kline_gaps/: spot.json  um_futures.json
configs/: CLAUDE.md  download_spot_kline.yaml  download_swap_kline.yaml  download_swap_metrics.yaml  parse_klines.yaml
configs/download/: cm_funding.yaml  cm_kline.yaml  spot_kline.yaml  um_aggtrades.yaml  um_funding.yaml  um_kline.yaml  um_metrics.yaml
configs/holo_1m/: cm.yaml  spot.yaml  um.yaml
configs/parsing/: cm_funding.yaml  cm_kline.yaml  spot_kline.yaml  um_funding.yaml  um_kline.yaml
configs/resample/: cm.yaml  spot.yaml  spot_1d.yaml  spot_8h.yaml  um.yaml
docs/: ARCHITECTURE.md  PRD.md  README.md  SYSTEM_DESIGN.md  architecture.md  claude_md_guide.md  extending.md  modules.md
docs/reference/: README.md  common.md  testing.md
example/coin_5m_example/: config.json.example
examples/: CLAUDE.md  cm_futures_holo.py  cm_futures_holo_gap.py  download_spot_klines_usdt_1m.sh  download_um_funding_usdt_perpetual.sh  download_um_klines_usdt_1m.sh  kline_download_task.py
fetcher/: __init__.py  binance.py
generate/: app.py  kline.py  kline_gaps.py  merge.py  resample.py  resample_lazy.py  util.py
legacy/api/: app.py  binance.py  binance_market_async.py
legacy/config/: config.py
legacy/generate/: app.py  kline.py  resample.py
legacy/util/: log_kit.py  network.py
merge/: kline.py
msg_sender/: __init__.py  dingding.py
notebook/: compare.ipynb  fill_gap.ipynb  funding.ipynb  funding_csv.ipynb  generate.ipynb  kline_gap.ipynb  quantclass_data.ipynb  read_csv.ipynb  resample.ipynb  resample_lazy.ipynb  test_ts_mgr.ipynb  ts_mgr.ipynb
research_notebook/: guess_tick.ipynb  relist.ipynb
scripts/: aws_download.sh  backup_aws_kline.sh
skills/binance-datatool/: SKILL.md
test/: checker.py  test_market.py  test_socket.py
tests/: CLAUDE.md  aws_client.py  aws_downloader.py  checksum.py  conftest.py  csv_conv.py  funding_comp.py  funding_completion.py  gap_detector.py  holo_merger.py  infer_exginfo.py  kline_comp.py  kline_completion.py  local_aws_client.py  log_kit.py  parser.py  path_builder.py  resampler.py  splitter.py  symbol_filter.py  test_archive_client.py  test_archive_workflow.py  test_checksum.py  test_cli.py  test_downloader.py  test_enums.py  test_filter.py  test_logging.py  test_markers.py  test_path.py  test_progress.py  test_symbol_dir.py  test_symbols.py  test_utils.py
unit_test/: read_csv.ipynb
usdt_1h_alpha_example/: config.json.example
usdt_5m_example/: config.json  config.json.example
util/: __init__.py  common.py  concurrent.py  db.py  digit.py  infer_exginfo.py  log_kit.py  network.py  symbol_filter.py  time.py  ts_manager.py  util.py
(+126 files in other folders)
