[project]
name = "binance-datatool"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.12.9",
    "colorama>=0.4.6",
    "polars>=1.30.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = ["black>=25.1.0", "ipykernel>=6.30.1", "ipython>=9.3.0", "isort>=6.0.1"]

[tool.uv]
default-groups = []

[project.scripts]
bhds = "bhds.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bdt_common/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bhds", "src/bdt_common"]
