[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "binance-datatool"
version = "0.1.0"
description = "Modern tools for exploring and managing Binance historical market data."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "lostleaf" }]
keywords = ["binance", "crypto", "historical-data", "market-data", "trading"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.13.5",
  "loguru>=0.7.3",
  "python-binance>=1.0.32",
  "tenacity>=9.1.4",
  "typer>=0.24.1",
  "xmltodict>=1.0.4",
]

[project.urls]
Homepage = "https://github.com/lostleaf/binance_datatool"
Repository = "https://github.com/lostleaf/binance_datatool"
Issues = "https://github.com/lostleaf/binance_datatool/issues"

[project.scripts]
bhds = "binance_datatool.bhds.cli:app"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/binance_datatool"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["W", "I", "UP", "B", "SIM", "TC"]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"src/binance_datatool/bhds/cli/*.py" = ["TC001"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that make real network requests to Binance public endpoints",
]
